# depgraph

./: .gitignore  README.md  pyproject.toml
depgraph/: __init__.py  cli.py  depsof.py  depson.py  discover.py  filter_dot.py
